feat(tokens): package.json exports 정의

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -2,9 +2,17 @@
   "name": "@packages/tokens",
   "version": "0.1.0",
   "main": "./build/js/index.js",
-  "types": "./build/js/index.d.ts",
+  "types": "./build/ts/tokens.d.ts",
+  "exports": {
+    "./vanilla-extract": {
+      "types": "./build/vanilla-extract/theme-tokens.d.ts",
+      "import": "./build/vanilla-extract/theme-tokens.js",
+      "default": "./build/vanilla-extract/theme-tokens.js"
+    },
+    "./css": "./build/css/variables.css"
+  },
   "files": [
-    "build/**/*"
+    "build"
   ],
   "scripts": {
     "build": "node scripts/build.js",
@@ -12,7 +20,11 @@
     "clean": "rm -rf build"
   },
   "devDependencies": {
+    "chokidar": "^3.5.3",
     "style-dictionary": "^3.8.0",
-    "chokidar": "^3.5.3"
+    "@repo/typescript-config": "workspace:*"
+  },
+  "dependencies": {
+    "json-to-ts": "^2.1.0"
   }
 }
