feat(tokens) : vanilla extract global theme 설정과 sprinkles 설정

--- a/packages/vanilla-extract-config/tsconfig.json
+++ b/packages/vanilla-extract-config/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "dist",
     "rootDir": "src",
     "declaration": true,
+    "moduleResolution": "bundler",
     "declarationDir": "dist"
   },
   "include": ["src"]
