--- a/packages/vanilla-extract-config/package.json
+++ b/packages/vanilla-extract-config/package.json
@@ -6,10 +6,11 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@vanilla-extract/css": "^1.17.4"
+    "@vanilla-extract/css": "^1.17.4",
+    "@vanilla-extract/sprinkles": "^1.6.5"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
-    "@packages/tokens": "workspace:*"
+    "@packages/tokens": "workspace:*",
+    "@repo/typescript-config": "workspace:*"
   }
 }
