--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,39 +1,41 @@
 {
   "name": "@packages/ui",
   "version": "0.1.0",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist.index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.cjs"
     }
   },
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --clean",
-    "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "build": "vite build",
+    "dev": "vite build --watch",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@vanilla-extract/css": "^1.17.4",
     "react": "^19.1.1",
     "storybook": "^9.1.8"
   },
   "devDependencies": {
-    "@packages/tailwind-config": "workspace:*",
-    "@tools/eslint-config": "workspace:*",
+    "vite": "^7.1.7",
+    "vite-tsconfig-paths": "^5.1.4",
+    "@vitejs/plugin-react": "^5.0.3",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "@packages/vanilla-extract-config": "workspace:*",
+    "@packages/tokens": "workspace:*",
     "@storybook/react": "^9.1.8",
-    "@tools/typescript-config": "workspace:*",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "tailwindcss": "^3.3.0",
-    "tsup": "^7.0.0",
-    "typescript": "~5.8.3",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6"
+    "@vanilla-extract/vite-plugin": "^5.1.1",
+    "tsup": "^7.0.0"
   }
 }
