--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,21 +21,22 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.17.4",
+    "@vanilla-extract/recipes": "^0.5.7",
     "react": "^19.1.1",
     "storybook": "^9.1.8"
   },
   "devDependencies": {
-    "vite": "^7.1.7",
-    "vite-tsconfig-paths": "^5.1.4",
-    "@vitejs/plugin-react": "^5.0.3",
+    "@packages/tokens": "workspace:*",
+    "@packages/vanilla-extract-config": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@packages/vanilla-extract-config": "workspace:*",
-    "@packages/tokens": "workspace:*",
     "@storybook/react": "^9.1.8",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vanilla-extract/vite-plugin": "^5.1.1",
-    "tsup": "^7.0.0"
+    "@vitejs/plugin-react": "^5.0.3",
+    "tsup": "^7.0.0",
+    "vite": "^7.1.7",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
