--- a/packages/vanilla-extract-config/package.json
+++ b/packages/vanilla-extract-config/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.17.4",
+    "@vanilla-extract/recipes": "^0.5.7",
     "@vanilla-extract/sprinkles": "^1.6.5"
   },
   "devDependencies": {
