feat(tokens): vanilla extract 토큰 생성 위임에 따른 변경사항 반영 및 sprinkle 제거를 통한 button.css.ts, input.css.ts 변경사항 반영

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
     "lib": ["ES2022", "DOM"],
+    "moduleResolution": "bundler",
     "paths": {
       "@packages/vanilla-extract-config": [
         "../vanilla-extract-config/src/index.ts"
@@ -9,6 +10,6 @@
     }
   },
 
-  "include": ["src", "../../vanilla-extract-config/*"],
-  "exclude": ["node_modules", "build"]
+  "include": ["src", "../../vanilla-extract-config/*", "../tokens/*"],
+  "exclude": ["node_modules"]
 }
