--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,17 +20,22 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-links": "^9.1.10",
+    "@storybook/react-vite": "^9.1.10",
     "@vanilla-extract/css": "^1.17.4",
     "@vanilla-extract/recipes": "^0.5.7",
     "react": "^19.1.1",
-    "storybook": "^9.1.8"
+    "react-dom": "^19.1.1",
+    "storybook": "^9.1.10"
   },
   "devDependencies": {
     "@packages/tokens": "workspace:*",
     "@packages/vanilla-extract-config": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@storybook/react": "^9.1.8",
+    "@storybook/addon-docs": "^9.1.10",
+    "@storybook/react": "^9.1.10",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vanilla-extract/vite-plugin": "^5.1.1",
