--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "test": "turbo run test",
     "build:tokens": "pnpm --filter @packages/tokens build",
     "build:vanilla-extract": "pnpm --filter @packages/vanilla-extract-config build",
-    "storybook": "pnpm --filter @packages/ui storybook"
+    "storybook": "pnpm --filter @packages/ui storybook",
+    "build:storybook": "pnpm --filter @packages/ui build-storybook"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@turbo/gen": "^1.10.0",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
+    "chromatic": "^13.3.0",
     "eslint": "^9.36.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
