--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -34,7 +34,7 @@ jobs:
             turbo-${{ github.ref_name }}-
       - name: Build Storybook
         working-directory: packages/ui
-        run: pnpm run build:storybook
+        run: pnpm -w run build:storybook
       - name: Publish to Chromatic
         uses: chromaui/action@latest
         with:
