refactor(workflow): bulild token step  추가

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -32,6 +32,8 @@ jobs:
           key: turbo-${{ github.ref_name }}-${{ github.sha }}
           restore-keys: |
             turbo-${{ github.ref_name }}-
+      - name: Build Tokens
+        run: pnpm -w run build:tokens
       - name: Build Storybook
         working-directory: packages/ui
         run: pnpm -w run build:storybook
