--- a/apps/code-generator/package.json
+++ b/apps/code-generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-generator",
+  "name": "@apps/code-generator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,21 +12,22 @@
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
-    "@packages/vanilla-extract-config": "workspace:*",
+    "@dnd-kit/utilities": "^3.2.2",
     "@packages/ui": "workspace:*",
+    "@packages/vanilla-extract-config": "workspace:*",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "globals": "^16.4.0",
-    "vite": "^7.1.7",
-    "vite-tsconfig-paths": "^5.1.4",
-    "@vitejs/plugin-react": "^5.0.3",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@vanilla-extract/vite-plugin": "^5.1.1"
+    "@vanilla-extract/vite-plugin": "^5.1.1",
+    "@vitejs/plugin-react": "^5.0.3",
+    "globals": "^16.4.0",
+    "vite": "^7.1.7",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
