--- a/apps/code-generator/tsconfig.json
+++ b/apps/code-generator/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "files": [],
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "baseUrl": "."
   },
   "references": [
     { "path": "./tsconfig.app.json" },
