--- a/apps/code-generator/tsconfig.node.json
+++ b/apps/code-generator/tsconfig.node.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "lib": ["ES2022"],
     "types": ["node"],
-    "moduleResolution": "nodenext"
+    "moduleResolution": "nodenext",
+    "module": "nodenext"
   },
   "include": ["vite.config.ts"]
 }
