--- a/apps/code-generator/package.json
+++ b/apps/code-generator/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@packages/ui": "workspace:*",
     "@packages/vanilla-extract-config": "workspace:*",
+    "acorn-jsx": "^5.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "zustand": "^5.0.8"
