--- a/apps/code-generator/package.json
+++ b/apps/code-generator/package.json
@@ -16,6 +16,7 @@
     "@packages/ui": "workspace:*",
     "@packages/vanilla-extract-config": "workspace:*",
     "acorn-jsx": "^5.3.2",
+    "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "zustand": "^5.0.8"
