refactor(project structure): global 설정 파일들 repo 디렉토리에서 루트 폴더로 이동 (별도로 빌드 필요없는 설정 파일들이라 package.json 불필요)

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,10 +20,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "paths": {
-      "@apps/code-generator": ["../../apps/code-generator/src/*"],
-      "@packages/ui": ["../../packages/ui/src/index.ts"],
+      "@apps/code-generator": ["./apps/code-generator/src/*"],
+      "@packages/ui": ["./packages/ui/src/index.ts"],
       "@packages/vanilla-extract-config": [
-        "../../packages/vanilla-extract-config/src/index.ts"
+        "./packages/vanilla-extract-config/src/index.ts"
       ]
     }
   }
