--- a/packages/vanilla-extract-config/package.json
+++ b/packages/vanilla-extract-config/package.json
@@ -6,12 +6,12 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@packages/tokens": "workspace:*"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0",
     "@vanilla-extract/css": "^1.17.4",
     "@vanilla-extract/recipes": "^0.5.7",
     "@vanilla-extract/sprinkles": "^1.6.5"
-  },
-  "devDependencies": {
-    "@packages/tokens": "workspace:*",
-    "@repo/typescript-config": "workspace:*"
   }
 }
