--- a/apps/code-generator/tsconfig.node.json
+++ b/apps/code-generator/tsconfig.node.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@repo/typescript-config/base.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "lib": ["ES2022"],
     "types": ["node"],
