--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "storybook": "pnpm --filter @packages/ui storybook",
     "build:storybook": "pnpm --filter @packages/ui build-storybook"
   },
+  "overrides": {
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
+  },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@turbo/gen": "^1.10.0",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
+    "babel-plugin-react-compiler": "^1.0.0",
     "chromatic": "^13.3.0",
     "eslint": "^9.36.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-mdx": "^3.6.2",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "turbo": "^2.5.8",
@@ -29,7 +35,6 @@
     "typescript-eslint": "^8.44.1"
   },
   "workspaces": [
-    "repo/*",
     "apps/*",
     "packages/*"
   ],
