--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "eslint-plugin-mdx": "^3.6.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.22",
     "turbo": "^2.5.8",
     "typescript": "^5.0.0",
-    "typescript-eslint": "^8.44.1"
+    "typescript-eslint": "^8.44.1",
+    "vite-plugin-babel": "^1.3.2"
   },
   "workspaces": [
     "apps/*",
