--- a/apps/code-generator/package.json
+++ b/apps/code-generator/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.2",
     "@packages/ui": "workspace:*",
+    "@xyflow/react": "^12.9.0",
     "acorn-jsx": "^5.3.2",
     "lucide-react": "^0.546.0",
     "zustand": "^5.0.8"
