--- a/apps/code-generator/package.json
+++ b/apps/code-generator/package.json
@@ -5,20 +5,21 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.2",
     "@packages/ui": "workspace:*",
     "@xyflow/react": "^12.9.0",
+    "acorn": "^8.15.0",
     "acorn-jsx": "^5.3.2",
     "lucide-react": "^0.546.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
