--- a/packages/vanilla-extract-config/package.json
+++ b/packages/vanilla-extract-config/package.json
@@ -3,15 +3,19 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "vite build",
+    "dev": "vite build --watch"
   },
   "dependencies": {
     "@packages/tokens": "workspace:*"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
     "@vanilla-extract/css": "^1.17.4",
     "@vanilla-extract/recipes": "^0.5.7",
-    "@vanilla-extract/sprinkles": "^1.6.5"
+    "@vanilla-extract/sprinkles": "^1.6.5",
+    "@vanilla-extract/vite-plugin": "^5.1.1",
+    "typescript": "^5.0.0",
+    "vite": "^7.1.7",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
