--- a/apps/code-generator/package.json
+++ b/apps/code-generator/package.json
@@ -18,6 +18,7 @@
     "acorn": "^8.15.0",
     "acorn-jsx": "^5.3.2",
     "lucide-react": "^0.546.0",
+    "nanoid": "^5.1.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "zustand": "^5.0.8"
