refactor(property editor): chromatic 빌드 시 turbosnap 오류에 대한 stats.json 옵션 추가

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,7 @@
     "build": "vite build",
     "dev": "vite build --watch",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build --output-dir ./packages/ui/storybook-static",
+    "build-storybook": "storybook build --output-dir ./packages/ui/storybook-static --stats-json",
     "clean": "rm -rf dist"
   },
   "dependencies": {
