--- a/apps/code-generator/package.json
+++ b/apps/code-generator/package.json
@@ -13,11 +13,13 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.2",
+    "@monaco-editor/react": "^4.7.0",
     "@packages/ui": "workspace:*",
     "@xyflow/react": "^12.9.0",
     "acorn": "^8.15.0",
     "acorn-jsx": "^5.3.2",
     "lucide-react": "^0.546.0",
+    "monaco-editor": "^0.54.0",
     "nanoid": "^5.1.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
